Fix acct desc
